Update call end button text in English and Chinese
Changed the 'buttonNameCallEnd' label from 'Hang up (SIM 1)' to 'Hang up' in English and from '电话1挂断' to '电话挂断' in Chinese to generalize the button text.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -250,7 +250,7 @@
   "buttonNameSpeakerMute": "Speaker mute",
   "buttonNameMicMute": "Microphone mute",
   "buttonNameCallDial": "Dial",
-  "buttonNameCallEnd": "Hang up (SIM 1)",
+  "buttonNameCallEnd": "Hang up",
   "buttonNamePlayPause": "Play / pause",
   "buttonNameNextTrack": "Next track",
   "buttonNamePreviousTrack": "Previous track",
