--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -250,7 +250,7 @@
   "buttonNameSpeakerMute": "扬声器静音",
   "buttonNameMicMute": "话筒静音",
   "buttonNameCallDial": "电话拨号",
-  "buttonNameCallEnd": "电话1挂断",
+  "buttonNameCallEnd": "电话挂断",
   "buttonNamePlayPause": "暂停/播放",
   "buttonNameNextTrack": "下一曲",
   "buttonNamePreviousTrack": "上一曲",
