Update WearOS re-pair feature label and improve formatting
Changed the label for the re-pair feature to 'WearOS Re-pair' in both English and Chinese localizations and updated corresponding Dart localization files. Also improved code formatting and readability in display.dart without changing logic.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -189,7 +189,7 @@
   "featureBatteryManager": "Battery manager",
   "featureRotateScreen": "Force screen rotation",
   "featureCapture": "Screenshot / Recording",
-  "featureRePair": "Re-pair",
+  "featureRePair": "WearOS Re-pair",
   "featureFlashTool": "Flash tool",
   "featureComingSoonTitle": "Coming soon",
   "featureComingSoonMessage": "This feature ({feature}) is not available in this rebuild yet. We will add it soon.",
